--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.env
+/test/unit/coverage/
 
 # Editor directories and files
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
