--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.js",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config build/webpack.dev.conf.js",
+    "dev":
+      "webpack-dev-server --inline --progress --host 0.0.0.0 --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
@@ -13,8 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-polyfill": "6.26.0",
+    "rxdb": "7.4.3",
+    "rxjs": "5.5.8",
     "vue": "^2.5.2",
-    "vuetify": "1.0.11"
+    "vue-touch": "2.0.0-beta.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -71,10 +75,6 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
   "keywords": []
 }
