--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "api": "nodemon server/index.js",
+    "api": "nodemon --watch server server/index.js",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.224.1",
+    "axios": "^0.18.0",
     "babel-polyfill": "6.26.0",
     "body-parser": "^1.18.2",
     "dexie": "^2.0.2",
@@ -22,8 +23,11 @@
     "dynamoose": "^0.8.7",
     "express": "^4.16.3",
     "rxjs": "5.5.8",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "uglify-es": "^3.3.9",
     "uuid": "^3.2.1",
     "vue": "^2.5.2",
+    "vue-contenteditable-directive": "^1.1.3",
     "vue-touch": "2.0.0-beta.4"
   },
   "devDependencies": {
