--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "uuid": "^3.2.1",
     "vue": "^2.5.2",
     "vue-contenteditable-directive": "^1.1.3",
-    "vue-touch": "2.0.0-beta.4"
+    "vue-touch": "2.0.0-beta.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
